--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity
             android:name=".MainMenuActivity"
             android:exported="false" />
+
+        <activity android:name=".ReservationActivity"/>
     </application>
 
 </manifest>
